test/bootstrap/errors/tuple-pat-len-mismatch/tuple-pat-len-mismatch.foster
main = {
  expect_i1 False;
  print_i1 (__COMPILES__
    case (1,2)
      of (_, _, _) -> 0
      of _ -> 1
    end
  );
};

